Add DeptList & Emplist Add & Selections

--- a/EmployeeReviews/EmployeeReviews.csproj
+++ b/EmployeeReviews/EmployeeReviews.csproj
@@ -95,6 +95,12 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\EmployeeReviews.Services\EmployeeReviews.Services.csproj">
+      <Project>{f4a3b61b-4480-4d1b-9ba4-39c3eadbe327}</Project>
+      <Name>EmployeeReviews.Services</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
